--- a/LaTeX/GeebsActivation.tex
+++ b/LaTeX/GeebsActivation.tex
@@ -62,7 +62,7 @@
         
     Thus, any points on a line drawn through the origin should remain on that line before and after the transformation or more generally any points on a line drawn through the centre of the input space should all remain on another line drawn through the centre of the output space. It does not matter if all the input lines are rotated evenly about the centre during the activation function, however I see no purpose in doing so. In summary, the direction must not be dependent on the distance of a point from the centre of the space. It is also important to mention that the weights in fully connected networks are performing a transformation around the origin, this indicates that a fully connected network already is origin centric.
 
-    Overall by ensuring that all points on the centred line remain on another centred line after the transformation, then the 'meaning-vectors' passing through the origin should remain linear. Linear meaning-vectors means that the network can more easily extrapolate trends and that these trends are more interpretable as the network does not need to performing extra processing to account for curved trend-lines. The network can then reason that along the trendline a property in the data gets stronger. In effect we are saying that the output space is a spherical projection of the input space.
+    Overall by ensuring that all points on the centred line remain on another centred line after the transformation, then the 'meaning-vectors' passing through the origin should remain linear. The presence of linear meaning-vectors means that the network can more easily extrapolate trends and that these trends are more interpretable as the network does not need to performing extra processing to account for curved trend-lines. The network can then reason that along the trendline a property in the data gets stronger. In effect we are saying that the output space is a spherical projection of the input space.
 
     %It can be assumed that the network shapes manifolds in certain ways to express useful trendlines within the data. It is also natural for the network to produce these trends as roughly straight lines. We shall call these trend lines 'meaning vectors'. As they could mean something qualatitive in the real world, let us say our original data was an image. It is passed through several layers of the neural network until a trendline is expressed. Points which are further along such a line could correspond to more of the colour red in the original image. Thus, these vectors have a 'meaning'.
         
@@ -74,7 +74,7 @@
     
     A continuous functions is our final strict criteria. However, the function does not need to be smooth. With a discontinuous function, potential gaps are introduced in to the manifold. There is no reason to do this and it just creates irregularities in the distribution of points in the manifold making it more difficult for the network to interpret.
     
-    Functions such as the step function violate many of our criteria, but particularly this discontinuity causes the manifold to lose large amounts of information as several regions of the manifold are collapsed to singular points. This should be avoided as is effectively reducing the dimensionality of the manifold.
+    Functions such as the step function violate many of our criteria, but particularly this discontinuity causes the manifold to lose large amounts of information as several regions of the manifold are collapsed to singular points. This should be avoided as it is effectively reducing the dimensionality of the manifold.
 
     %-Discontinuity going to a point reduces the dimensionality of the manifold.
 
@@ -84,9 +84,9 @@
         
     \subsubsection{Bounded Functions}
         
-    Bounded functions is referring to the output space of an activation function being finite. Thus as the radii of the input space goes to infinity the output reaches some finite limiting radii from the centre. This is a relaxed criteria as we have seen much success using functions such as ReLU and leaky-ReLU in many applications. I feel these are very useful for specific use cases, but their infinite output space is not favourable in general purpose activation functions.
+    Bounded Functions is referring to the output space of an activation function being finite. Thus as the radii of the input space goes to infinity, the output reaches some finite limiting radii from the centre. This is a relaxed criteria as we have seen much success using functions such as ReLU and leaky-ReLU in many applications. I feel these are very useful for specific use cases, but their infinite output space is not favourable in general purpose activation functions.
     
-    This is because outputs can reach huge values which may impede the function of later neurons as they become overloaded by such large values. This can be corrected for using a batch normalisation technique, however, it is not always possible to use batch normalisations. Hence we introduce "bounded function" as a relaxed criterion.
+    This is because outputs can reach huge values which may impede the function of later neurons as they become overloaded by such large values. This can be corrected for using a batch normalisation technique, however it is not always possible to use batch normalisations. Hence we introduce "bounded function" as a relaxed criterion.
        
     \subsubsection{Origin as the Centre of the Space}
         
@@ -99,7 +99,7 @@
     \section{Criteria Fulfilling Functions}
     \subsubsection{Geebs' Tanh Function}
     
-    We first introduce the "Geebs' Tanh Function" which meets all of the strict and relaxed criteria (Eqn. 1). This is a modification of a standard Tanh formula. Instead of applying a tanh function elementwise, it instead applies tanh to the pythagorian distance of a point from the origin. Improvements should be observed by replacing most general uses of standard Tanh and Sigmoid within neural networks. However, such specific uses such as sigmoid providing a blocking factor in a network, for example the 'forget network' in an LSTM which uses a sigmoid function before an elementwise multiplication, should not be replaced as the required function's bounds are different from the Geeb's Tanh function. We provide an alternate equation to accomidate for this specific, but common, example later.
+    We first introduce the "Geebs' Tanh Function" which meets all of the strict and relaxed criteria (Eqn. 1). This is a modification of a standard Tanh formula. Instead of applying a tanh function elementwise, it instead applies tanh to the pythagorian distance of a point from the origin. Improvements should be observed by replacing most general uses of standard Tanh and Sigmoid within neural networks. However, such specific uses such as sigmoid providing a blocking factor in a network, for example the 'forget network' in an LSTM which uses a sigmoid function before an elementwise multiplication, should not be replaced as the required function's bounds are different from the Geeb's Tanh function. We provide an alternate equation to accomidate for this specific, albeit common, example later.
 
     \begin{equation}
         \label{eqn: Geebs' Tanh Function} 
@@ -115,19 +115,19 @@
     \end{array} 
     \right. \]
 
-    This function does not reduce the dimensionality of the space, shown by $\bar{n}'$ having the same number of elements as $\bar{n}$, and it does not reduce the dimensionality of the manifold which can be shown experimentally. All of our functions are constructed by two seperable equations, reflecting a hyper-spherical coordinate system used. There is the magnitude equation which is only dependent on the pythagorian distance of a point from the origin, consequently producing a spherically symmetric output space. The magnitude equation is given by $\tanh|\bar{n}|$. The other equation describes the direction points are distributed in and this is done by projecting the space radially onto a hyper-spherical shell with magnitude one from the origin, thus ensuring the projection criteria. This direction equation simply converts any given vector representing a point from the origin to its corresponding unit vector. The direction equation is $\hat{n}$. Therefore, any point on a line through the origin remains on that line after the transformation. This function is also continuous, centred around the origin and bounded with a maximum radius of one from the origin. Geeb's Tanh function also happens to be smooth.
+    This function does not reduce the dimensionality of the space, shown by $\bar{n}'$ having the same number of elements as $\bar{n}$, and it does not reduce the dimensionality of the manifold which can be shown experimentally. All of our functions are constructed by two seperable equations, reflecting a hyper-spherical coordinate system used. There is the magnitude equation which is only dependent on the pythagorian distance of a point from the origin, consequently producing a spherically symmetric output space. The magnitude equation is given by $\tanh|\bar{n}|$. The other equation describes the direction points are distributed in, and this is done by projecting the space radially onto a hyper-spherical shell with magnitude one from the origin, thus ensuring the projection criteria. This direction equation simply converts any given vector representing a point from the origin to its corresponding unit vector. The direction equation is $\hat{n}$. Therefore, any point on a line through the origin remains on that line after the transformation. This function is also continuous, centred around the origin and bounded with a maximum radius of one from the origin. Geeb's Tanh function also happens to be smooth.
     
     This function suffers from the same problem which Tanh and Sigmoid do. Its gradients tends to zero in the limit where the input point goes to an infinite distance from the origin. This incurs the vanishing gradients problem.
 
     \subsubsection{Maxim-ReLU Function}
-    The second function we present is an analogue of the popular Leaky-ReLU function. Our Maxim-ReLU function meets all the strict criteria and all except one of the relaxed criteria. It fails to meet the relaxed bound function criteria. This is characteristic of a Leaky-ReLU function though, so it is acceptable in many applications. It applies a constant scaling given by $\alpha$ within a certain radius of the origin given by $\beta$. Consequently, we get a function similar to a typical Leaky-ReLU function but its is scaling applied within a certain range of the origin radially instead of the when the sign of a cartesian coordinate component is negative. Improvements should be made by replacing all uses of ReLU with Maxim-ReLU.
+    The second function we present is an analogue of the popular Leaky-ReLU function. Our Maxim-ReLU function meets all the strict criteria and all except one of the relaxed criteria. It fails to meet the relaxed bound function criteria. This is characteristic of a Leaky-ReLU function though, so it is acceptable in many applications. It applies a constant scaling given by $\alpha$ within a certain radius of the origin given by $\beta$. Consequently, we get a function similar to a typical Leaky-ReLU function except its scaling is applied within a certain range of the origin radially instead of the when the sign of a cartesian coordinate component is negative. Improvements should be made by replacing all uses of ReLU with Maxim-ReLU.
     
     \begin{equation}
         \label{eqn: Maxim-ReLU Function}
         F\left(\bar{n}\right)=\left(\max\left(\alpha\left(\bar{n}-\beta\right),\bar{n}-\beta\right)+\alpha\beta\right)\times\hat{n} 
     \end{equation}
 
-    Where ${0} < \alpha \leq {1}$ and ${0} < \beta$ and $\bar{n}$ is the cartesian coordinates represented in a vector for the input data point. Shown below is the derivative of each element in the output vector in respect to each element of the input vector. This shows the function fulfills the non-linear criteria.
+    Where ${0} < \alpha \leq {1}$ and ${0} < \beta$ and $\bar{n}$ is the cartesian coordinates represented in a vector for the input data point. Shown below is the derivative of each element in the output vector in respect to each element of the input vector. This shows that the function fulfills the non-linear criteria.
 
     \[\frac{\partial F\left(\bar{n}\right)_{i}}{\partial \bar{n_{j}}}=\left\{
     \begin{array}{ll}
@@ -139,11 +139,11 @@
     \end{array} 
     \right. \]
 
-   This function does not reduce the manifold's dimensionality. It can again be broken down into a magnitude equation $\left(\max\left(\alpha\left(\bar{n}-\beta\right),\bar{n}-\beta\right)+\alpha\beta\right)$ which is only dependent on the input data points's distance from origin and a direction $\hat{n}$ dependent only on the initial direction of the data point. Just as before the direction equation is simply projecting all vectors on to a unit hyper-sphere. Due to these properties our function meets both the spherical symmety and projection criteria. Its output space is also centred on the origin. However, this function is not bounded, just like a standard Leaky-ReLU, and is not smooth. Despite this, it does not suffer from gradients tending to zero as the input radius tends to infinity, therefore will not suffer badly from the vanishing gradients. This function should again provide improvements by replacing all cases of ReLU with Maxim-ReLU.
+   This function does not reduce the manifold's dimensionality. It can again be broken down into a magnitude equation $\left(\max\left(\alpha\left(\bar{n}-\beta\right),\bar{n}-\beta\right)+\alpha\beta\right)$ which is only dependent on the input data points' distance from origin and a direction $\hat{n}$ dependent only on the initial direction of the data point. Just as before, the direction equation is simply projecting all vectors onto a unit hyper-sphere. Due to these properties, our function meets both the spherical symmety and projection criteria. Its output space is also centred on the origin. However, this function is not bounded, just like a standard Leaky-ReLU, and is not smooth. Despite this, it does not suffer from gradients tending to zero as the input radius tends to infinity, therefore will not suffer badly from the vanishing gradients. This function should again provide improvements by replacing all cases of ReLU with Maxim-ReLU.
     
     \subsubsection{Hyper-Cubic Projection}
     
-    We have now replaced two of the most commonly used activation functions, which covers most of the general uses of activation functions. However, as previously mentioned, there are some unique use cases in which our functions are not applicable. One of these use cases is a blocking gate in an LSTM, this requires a hyper-cubic output space not a hyper-spherical output space. This hyper-cubic output space must also be bounded between zero (blocked) and one (passed) for each component in a neuron-basis coordinate system. Of course this is incompatible with the spherical symmetry criteria, but since this is a unique use case and is widely used we have proposed a projection equation to map a input space to a hyper-cubic space.
+    We have now replaced two of the most commonly used activation functions, which covers most of the general uses of activation functions. However, as previously mentioned, there are some unique use cases in which our functions are not applicable. One of these use cases is a blocking gate in an LSTM, as this requires a hyper-cubic output space rather than a hyper-spherical output space. This hyper-cubic output space must also be bounded between zero (blocked) and one (passed) for each component in a neuron-basis coordinate system. Of course this is incompatible with the spherical symmetry criteria, but since this is a unique use case and is widely used, we have proposed a projection equation to map an input space to a hyper-cubic space.
 
     This equation projects the input space into a hyper-cubic space bounded between -1 and 1 for all neuron-basis components. A typical minimum function cannot be used here, as it collapses the space in a cubic fashion rather than a spherical fashion. In effect this function preserves the space between $-1<\bar{n}<1$ whilst collapsing all space outside this region into a hyper-cubic shell. This can be performed using a typical minimum function, however this does not satisfy the projection criteria, as a straight line through the origin gets collapsed onto a line on the shell rather than a single point. Thus, to preserve the linearity of meaning-vectors we have designed equation 3 to project points onto the shell radially instead of cubicly.
 
@@ -152,7 +152,7 @@
         F\left(\bar{n}\right)=\min\left(\frac{1}{\max\left(\left|\bar{n}_{1}\right|,\left|\bar{n}_{2}\right|,...,\left|\bar{n}_{i}\right|\right)},1\right)\times\bar{n}
     \end{equation}
 
-    As mentioned this functions bounds are $-1<\bar{n}<1$ whereas we need a function to replace the sigmoid used in blocking gates requiring bounds of $0<\bar{n}<1$. This can be achieved using equation 4.
+    As mentioned, this function's bounds are $-1<\bar{n}<1$ whereas we need a function to replace the sigmoid used in blocking gates, requiring bounds of $0<\bar{n}<1$. This can be achieved using equation 4.
     
     \begin{equation}
         \label{eqn: Hyper-Cubic Projection Equation 2}
@@ -170,13 +170,13 @@
         \label{eqn: Geeb's-Sigmoid}
         T(x) = \sqrt{2}\hat{n}\tanh|\bar{n}|
     \end{equation}
-    Therefore, we have constructed an analogous function to sigmoid, meeting more criteria than the typical sigmoid. However, this final function still breaks several of criteria. Despite this, the criteria are guidance for how to construct generalised activation functions, yet this function is specific purposed and its purpose directly contradicts the criteria it has broken. Therefore, it is acceptable as it is optimised to the greatest it can be according to the criteria. Specific purpose activation functions are always preferable but it is not always feasable to design them. 
+    Therefore, we have constructed a function analogous to sigmoid, meeting more criteria than the typical sigmoid. However, this final function still breaks several criteria. Despite this, the criteria are guidance for how to construct generalised activation functions, yet this function is specific purposed and its purpose directly contradicts the criteria it has broken. Therefore it is acceptable as it is optimised to the greatest it can be according to the criteria. Specific purpose activation functions are always preferable but it is not always feasable to design them. 
 
     We have now offered alternatives to the most common activation functions used in fully connected networks, convolutional networks and recurrent neural networks. This final equation means that all activation functions within an standard LSTM now have analogous functions which fulfill our criteria.
     \section{Discussion}
-    It is evident that many of these functions are substantially more complex than the common activation functions. However, our hope is that testing will show the benefit from using our modified functions outweighs the increased computational processing cost for our new slightly more complex functions. Rudimentary testing by ourselves has indicated that this is true.
+    It is evident that many of these functions are substantially more complex than the common activation functions. However, our hope is that testing will show the benefit of using our modified functions far outweighs the partially increased computational processing cost for our new slightly more complex functions. Rudimentary testing by ourselves has indicated that this is true.
 
-    We do not believe this list of criteria to be complete, further advancements in understanding the spatial nature of networks will hopefully reveal some further optimisations to activation functions.
+    We do not believe this list of criteria to be complete; further advancements in understanding the spatial nature of networks will hopefully reveal some further optimisations to activation functions.
 
     Finally, there are three aspects we would like to benchmark our improved functions on in regards to the network's learning capability. The first is the rate of learning whilst using our modified functions compared to common activation functions. Secondly we would like to investigate whether the learning 'saturates' at a better level than a typical activation function. This could be done using accuracy on a classification task. Thirdly, we would expect the time for the network to show initial, measurable improvement on a task to reduce. For example a network will by chance get roughly 10\% on the MNIST dataset. The time taken for a statistically significant increase in success above this random chance should be shorter with our new functions.
 
